2016-02-10  Natalia Portillo  <claunia@claunia.com>

	* Commands/DeviceInfo.cs:
	  Added support for Media Card Pass Through detection and
	  information.

	* Commands/DumpMedia.cs:
	* Commands/MediaInfo.cs:
	* Commands/MediaScan.cs:
	* Commands/DeviceReport.cs:
	  Added support for ATA devices.

2016-02-05  Natalia Portillo  <claunia@claunia.com>

	* Commands/DeviceReport.cs:
	  Check for 36 blocks in long block search in all cases.

	* Commands/DumpMedia.cs:
	  Only try the persistent pass one time. If it didn't correct
	  in the previous cycle it won't magically do now.
	Sort unreadalbe sectors before printing them.

2016-02-05  Natalia Portillo  <claunia@claunia.com>

	* Commands/DumpMedia.cs:
	  Correct physical/logical block size in sidecar.

2016-02-05  Natalia Portillo  <claunia@claunia.com>

	* Commands/Analyze.cs:
	* Commands/CreateSidecar.cs:
	  Check multiple partitioning schemes.

	* Commands/DumpMedia.cs:
	  Check multiple partitioning schemes.
	Do not add interface data to sidecar for removable devices.
	Add dump hardware to sidecar for remocable block devices.

2016-02-04  Natalia Portillo  <claunia@claunia.com>

	* Commands/DumpMedia.cs:
	  Added creation of IBG logs.
	Added filesystem and partitions detection (does not work with
	  raw).

2016-02-04  Natalia Portillo  <claunia@claunia.com>

	* Core/MHDDLog.cs:
	* DiscImageChef.csproj:
	* Commands/DumpMedia.cs:
	* Commands/MediaScan.cs:
	  Separated MHDD and IBG log generations to separate classes.

2016-02-04  Natalia Portillo  <claunia@claunia.com>

	* Commands/Decode.cs:
	* Commands/Verify.cs:
	* Commands/Analyze.cs:
	* Commands/Entropy.cs:
	* Commands/Checksum.cs:
	* Commands/PrintHex.cs:
	* Commands/CreateSidecar.cs:
	  Check if image file exists before proceeding.

	* Commands/MediaInfo.cs:
	* Commands/MediaScan.cs:
	* Commands/DeviceInfo.cs:
	* Commands/DeviceReport.cs:
	  Check if device exists before proceeding.

	* Commands/DumpMedia.cs:
	  Check if device exists before proceeding.